err/blockext-mindstorms-nxt.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/blockext'...
Listing './lib/python3.5/site-packages/blockext-0.2.0a2.egg-info'...
Listing './lib/python3.5/site-packages/blockext_mindstorms_nxt'...
Listing './lib/python3.5/site-packages/blockext_mindstorms_nxt-0.2.egg-info'...
Listing './lib/python3.5/site-packages/future'...
Listing './lib/python3.5/site-packages/future/backports'...
Listing './lib/python3.5/site-packages/future/backports/email'...
Listing './lib/python3.5/site-packages/future/backports/email/mime'...
Listing './lib/python3.5/site-packages/future/backports/html'...
Listing './lib/python3.5/site-packages/future/backports/http'...
Listing './lib/python3.5/site-packages/future/backports/test'...
Listing './lib/python3.5/site-packages/future/backports/urllib'...
Listing './lib/python3.5/site-packages/future/backports/xmlrpc'...
Listing './lib/python3.5/site-packages/future/builtins'...
Listing './lib/python3.5/site-packages/future/moves'...
Listing './lib/python3.5/site-packages/future/moves/dbm'...
Listing './lib/python3.5/site-packages/future/moves/html'...
Listing './lib/python3.5/site-packages/future/moves/http'...
Listing './lib/python3.5/site-packages/future/moves/test'...
Listing './lib/python3.5/site-packages/future/moves/tkinter'...
Listing './lib/python3.5/site-packages/future/moves/urllib'...
Listing './lib/python3.5/site-packages/future/moves/xmlrpc'...
Listing './lib/python3.5/site-packages/future/standard_library'...
Listing './lib/python3.5/site-packages/future/tests'...
Listing './lib/python3.5/site-packages/future/types'...
Listing './lib/python3.5/site-packages/future/utils'...
Listing './lib/python3.5/site-packages/future-0.16.0.egg-info'...
Listing './lib/python3.5/site-packages/libfuturize'...
Listing './lib/python3.5/site-packages/libfuturize/fixes'...
Listing './lib/python3.5/site-packages/libpasteurize'...
Listing './lib/python3.5/site-packages/libpasteurize/fixes'...
Listing './lib/python3.5/site-packages/nxt'...
Compiling './lib/python3.5/site-packages/nxt/bluesock.py'...
***   File "./lib/python3.5/site-packages/nxt/bluesock.py", line 38
    print 'Connecting via Bluetooth...'
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/nxt/error.py'...
***   File "./lib/python3.5/site-packages/nxt/error.py", line 87
    raise ProtocolError, status
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nxt/fantomsock.py'...
***   File "./lib/python3.5/site-packages/nxt/fantomsock.py", line 42
    print "No NXT object assigned"
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/nxt/ipsock.py'...
***   File "./lib/python3.5/site-packages/nxt/ipsock.py", line 29
    print 'Connecting via Server...'
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/nxt/locator.py'...
***   File "./lib/python3.5/site-packages/nxt/locator.py", line 98
    print "silent and debug can't both be set; giving debug priority"
                                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/nxt/motcont.py'...
***   File "./lib/python3.5/site-packages/nxt/motcont.py", line 111
    raise MotorConError, 'Wrong port returned from ISMOTORREADY'
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nxt/motor.py'...
***   File "./lib/python3.5/site-packages/nxt/motor.py", line 140
    print message
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/nxt/sensor'...
Compiling './lib/python3.5/site-packages/nxt/sensor/digital.py'...
***   File "./lib/python3.5/site-packages/nxt/sensor/digital.py", line 91
    raise I2CError, 'ls_get_status timeout'
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nxt/sensor/mindsensors.py'...
***   File "./lib/python3.5/site-packages/nxt/sensor/mindsensors.py", line 233
    print 'That mode is already selected!'
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/nxt/system.py'...
***   File "./lib/python3.5/site-packages/nxt/system.py", line 205
    print "Warning! Brick name %s will be truncated to %s!" % (bname, bname[0:15])
                                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nxt/telegram.py'...
***   File "./lib/python3.5/site-packages/nxt/telegram.py", line 46
    raise InvalidOpcodeError, self.opcode
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nxt/usbsock.py'...
***   File "./lib/python3.5/site-packages/nxt/usbsock.py", line 40
    print 'Connecting via USB...'
                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/nxt_python-2.2.2.egg-info'...
Listing './lib/python3.5/site-packages/past'...
Listing './lib/python3.5/site-packages/past/builtins'...
Listing './lib/python3.5/site-packages/past/tests'...
Listing './lib/python3.5/site-packages/past/translation'...
Listing './lib/python3.5/site-packages/past/types'...
Listing './lib/python3.5/site-packages/past/utils'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
